# guestbook-project

./: .editorconfig  .env  .env.portainer  .gitignore  CHANGELOG.md  CLEANUP-FINAL-REPORT.md  CLEANUP-SUMMARY.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-TROUBLESHOOTING.md  DEPLOYMENT.md  DOCKER-TAGS.md  Dockerfile.combined  Dockerfile.simple  ENVIRONMENT-VARIABLES.md  EXPORT-IMPORT-DOCUMENTATION.md  GIT-CLEANUP-REPORT.md  IFRAME-INTEGRATION.md  LICENSE  PORTAINER-DEPLOYMENT-GUIDE.md  PORTAINER-DEPLOYMENT.md  PROBLEM-LÖSUNG.md  PRODUCTION-DEPLOYMENT.md  PROJECT-COMPLETION.md  README.md  RELEASE-NOTES-4.0.0-secure.md  SECURITY-FEATURES.md  SECURITY-HARDENING.md  SECURITY-IMPROVEMENTS.md  SECURITY-VALIDATION-REPORT.md  SECURITY.md  SESSION-MANAGEMENT.md  docker-compose.combined.yml  docker-compose.dev.yml  docker-compose.portainer-amd64.yml  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.production.yml  (+27 more)
.github/: pull_request_template.md
archive/: create_db_reviews.py  create_test_reviews.py  delete_fake_reviews.py  direct_import.py  fix_reviews.sh  generate_sql.py  import_absolute_final_5.py  import_all_reviews_with_dates.py  import_batch1_reviews.py  import_batch2_reviews.py  import_batch3_reviews.py  import_batch4_final.py  import_batch_1.py  import_final_10.py  import_final_10_reviews.py  import_final_2.py  import_missing_6_reviews.py  import_next_10_reviews.py  import_next_15_reviews.py  import_real_reviews_batch1.py  import_request.json  import_reviews.sql  import_reviews_11_20.py  import_reviews_21_30.py  import_reviews_31_40.py  import_reviews_6_10.py  import_reviews_batch.py  import_reviews_complete.py  import_reviews_working.py  import_simple.py  migrate_moderation.py  missing_reviews.sql  test_import.py  update_review_dates.py
backend/: Dockerfile  create_admin.py  pyproject.toml  requirements.txt  wait-for-db.py
backend/app/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py  security_monitor.py  utils.py
config/: .env.production
deployment/: portainer-stack.yml  (+1 more)
(+67 files in other folders)
